Adjust heights to prevent clipping

--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ ul {
 }
 
 .container-border {
-  max-height: 36em;
+  height: 36em;
   border: 1px dotted white;
   margin: 2em;
   padding: 2px;
@@ -145,7 +145,7 @@ ul {
 
 .job-folders-container {
   width: 400px;
-  height: 500px;
+  height: 470px;
   padding: 1em;
   margin-top: 1em;
   flex-direction:column;
@@ -153,6 +153,10 @@ ul {
   -webkit-justify-content: flex-start;
   align-items: baseline;
   overflow: scroll;
+}
+
+#producer {
+  height: 450px;
 }
 
 .job-folder {
